--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,97 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.type{
+  margin: auto;
+  width:500px;
+  font-weight:bold;
+  font-size: 40px;
+  color: #D69E2E;
+  font-style: italic;
+}
+
+.text{
+  width: full;
+}
+
+@media screen and (max-width: 600px) {
+  .text {
+    font-size: 20px;
+   width: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .img {
+     margin: 10px ;
+     padding: 20px;
+     margin: auto;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .type {
+    font-size: 20px;
+    width: 250px;
+    color: #D69E2E;
+    margin: auto;
+    padding: 5px;
+    margin: 5px;
+   
+  }
+}
+
+
+
+
+
+
+.name{
+  margin-left: auto;
+    margin-right: auto;
+    width: 20em;
+    border:1px solid red;
+    font-size: large;
+    color: aliceblue;
+    
+}
+
+.firstbox{
+  display:flex;
+ flex-wrap: wrap-reverse;
+ background-color: #4A5568;   
+  justify-content:space-evenly;
+ 
+}
+
+.img>Image{
+  border: 10px solid black;
+}
+
+
+
+
+
+.nav-menu .active{
+
+  padding-bottom: 10px;
+ border-bottom: 3px solid rgb(255, 255, 142); 
+ 
+}
+.nav-menu .active>Button{
+  background: #F6E05E
+}
+
+.appeartransparent{
+  background: #4A5568;
+}
+.appearsolid{
+  background-color:#1C191A; 
+}
+
