--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
   width:500px;
   font-weight:bold;
   font-size: 40px;
-  color: #D69E2E;
+  color: #b1977c;
   font-style: italic;
 }
 
@@ -43,7 +43,7 @@ code {
   .type {
     font-size: 20px;
     width: 250px;
-    color: #D69E2E;
+    color: #a48b71;
     margin: auto;
     padding: 5px;
     margin: 5px;
@@ -69,7 +69,7 @@ code {
 .firstbox{
   display:flex;
  flex-wrap: wrap-reverse;
- background-color: #4A5568;   
+
   justify-content:space-evenly;
  
 }
@@ -83,19 +83,62 @@ code {
 
 
 .nav-menu .active{
+  padding-bottom: 3%;
 
-  padding-bottom: 10px;
- border-bottom: 3px solid rgb(255, 255, 142); 
+ border-bottom: 3px solid #d8dddc;
+
+ 
  
 }
 .nav-menu .active>Button{
-  background: #F6E05E
+  background: white;
+;
+
 }
 
 .appeartransparent{
-  background: #4A5568;
+  background:#051523
 }
 .appearsolid{
-  background-color:#1C191A; 
+  background-color: #051523;
+  border-bottom: 5px solid #a48b71;
+  
 }
 
+
+
+@media screen and (max-width: 600px) {
+  .github-stat{
+     display: flex;
+     flex-wrap: wrap;
+     gap: 10px;
+  }
+  /* .imutable{
+    width: 100%;
+  }
+  
+  .middle-box{
+    
+ 
+
+ 
+  } */
+
+}
+
+@media screen and (max-width: 1000px) {
+  .github-stat{
+     display: flex;
+     flex-wrap: wrap;
+     gap: 10px;
+    
+  }
+ 
+  .middle-box>img{
+    width: 100%;
+    
+  }
+  .middle-box{
+    width: 100%;
+  }
+}
