--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,8 @@
   scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+/* 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,10 +14,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
+}
+
+body{
+  font-family: "mona";
 }
 
 @keyframes App-logo-spin {
