--- a/src/NavbarMobile/navmobile.css
+++ b/src/NavbarMobile/navmobile.css
@@ -6,6 +6,9 @@
     justify-content: space-evenly;
     padding: 2%;
 overflow: hidden;
+
+backdrop-filter: blur(22px);
+
     
     border-top-left-radius:20% ;
     border-top-right-radius:20% ;
@@ -19,9 +22,10 @@ overflow: hidden;
 .mapbtn{
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
  justify-content: center;
- object-fit: cover;
+height: 100px;
  
- width: 100px;
+ backdrop-filter: blur(22px);
+
 }
 
 #btn{
@@ -29,9 +33,55 @@ overflow: hidden;
     animation-name: hary1;
     animation-duration: 2s;
     animation-iteration-count: 1;
+    background: transparent;
+    
+  
+   
 }
 
-@media screen and (max-width: 700px) {
+#btn:hover{
+    animation: check 1s ;
+}
+
+@keyframes check {
+    0% {
+        /* Initial state of the animation */
+        
+        -webkit-transform: translateY(0)
+    }
+    25%{
+        transform: translateY(10px);
+    }
+    50% {
+        /* Intermediate state of the animation */
+      transform: translateY(-10px);
+    }
+    100% {
+        /* Final state of the animation */
+        transform: translateY(0px)
+    }
+}
+
+#hover-bright:hover{
+    animation: rotate linear 0.5s ;
+}
+ 
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(90deg);
+    }
+    75%{
+        transform: rotate(-90deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
+/* @media screen and (max-width: 700px) {
     @keyframes hary1 {
       
             0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
@@ -41,6 +91,6 @@ overflow: hidden;
        
     }
     
-  }
+  } */
 
 
