--- a/src/Project/project.css
+++ b/src/Project/project.css
@@ -27,5 +27,30 @@
     .project-grid-container{
       box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
+    #filter-btn{
+      backdrop-filter: blur(122px);
+      background-color: transparent;
+
+    }
+    #filter-btn:hover{
+      border:1px solid red;
+      animation: check 1s linear ;
+    }
+
+    @keyframes check {
+      0%{
+transform: translateY(10px);
+      }
+      25%{
+transform:translateY(-10px)
+      }
+      75%{
+        transform:translateY(10px)
+      }
+      100%{
+        transform:translateY(-10px)
+      }
+    }
+    
 
    
