--- a/src/Project/project.css
+++ b/src/Project/project.css
@@ -33,7 +33,7 @@
 
     }
     #filter-btn:hover{
-      border:1px solid red;
+      border:1px solid #A48B71;
       animation: check 1s linear ;
     }
 
